docs(part3-3): 补充JDK8常用GC收集器(Parallel GC默认/CMS低延迟/Serial/ParNew等及到G1的演进)